# trendmoon-mindshare-agent

./: .env.template  .gitignore  .gitmodules  LICENSE  Makefile  README.md  check_agent_runner.py  get_pyinstaller_dependencies.py  mindshare_fsm.yaml  pyproject.toml  ruff.toml
.github/workflows/: common_check.yaml  release.yml
pyinstaller/: __init__.py  mindshare_bin.py
