[tool.poetry]
name = "trendmoon-mindshare-agent"
version = "0.1.0"
description = ""
authors = ["xiuxiuxar"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
open-aea-ledger-solana = "==1.65.0"
open-aea-ledger-cosmos = "==1.65.0"
# open-aea-ledger-ethereum = "==1.65.0" # dcxt requires cowdao-cowpy, which requires newer eth-account, which is why we use the fork
open-aea-ledger-ethereum = {path = "third_party/forks/open-aea/plugins/aea-ledger-ethereum"}
open-aea = "==1.65.0"
open-aea-cli-ipfs = "==1.65.0"
open-aea-test-autonomy = "==0.19.7"
open-autonomy = "==0.19.7"
autonomy-dev = {extras = ["all"], version = "^0.2.153"}
click = "==8.1.8"
eth-account = "^0.13.5"
cowdao-cowpy = "1.0.0rc5"

[tool.poetry.group.dev.dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools"]
